--- a/style.css
+++ b/style.css
@@ -81,6 +81,12 @@ hr {
     font-size: 5rem;
 }
 
+.main {
+    display: flex;
+    flex-wrap: wrap;
+    background-color: #E9ECEF;
+}
+
 .main-articles {
     display: flex;
     flex-wrap: wrap;
@@ -105,10 +111,65 @@ hr {
     font-size: 1.5rem;
 }
 
+.education {
+    display: flex;
+    flex-wrap: wrap;
+    max-width: 1000px;
+    margin: 0 auto;
+    background-color: #0E122E;
+    margin-top: 15px;
+    margin-bottom: 15px;
+}
+
+.education_intro {
+    flex-basis: 100%;
+    margin: 20px 0;
+    text-align: center;
+    font-size: 4.5rem;
+    letter-spacing: 2px;
+}
+
+.article {
+    flex-basis: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    padding: 20px 65px;
+}
+
+.article_image {
+    display: block;
+    width: 70px;
+    height: 70px;
+    padding-left: 20px;
+}
+
+.article .text {
+    display: inline-block;
+    flex-basis: 80%;
+}
+
+.article_name-school {
+    font-size: 2rem;
+    padding-left: 50px;
+    margin: 10px;
+}
+
+.article_year {
+    font-size: 1.2rem;
+    padding-left: 50px;
+    margin: 10px;
+}
+
+.article_info {
+    font-size: 1.5rem;
+    margin: 10px;
+    padding-left: 50px;
+}
+
 footer {
     display: flex;
-    background-color: #1B1B27;
-    height: 20vh;
+    background-color: #140F0F;
+    height: 15vh;
 }
 
 #footer {
