--- a/style.css
+++ b/style.css
@@ -118,7 +118,7 @@ hr {
     margin: 0 auto;
     background-color: #5E72E4;
     margin-top: 15px;
-    margin-bottom: 15px;
+    margin-bottom: 45px;
 }
 
 .education_intro {
@@ -133,7 +133,7 @@ hr {
     flex-basis: 100%;
     display: flex;
     flex-wrap: wrap;
-    padding: 20px 65px;
+    padding: 20px 65px 60px;
 }
 
 .article_image {
@@ -144,7 +144,6 @@ hr {
 }
 
 .article .text {
-    display: inline-block;
     flex-basis: 80%;
 }
 
