--- a/style.css
+++ b/style.css
@@ -90,8 +90,7 @@ hr {
 .main-articles {
     display: flex;
     flex-wrap: wrap;
-    max-width: 950px;
-    height: 20vh;
+    max-width: 1000px;
     margin: 30px auto;
     border-radius: 5px;
     background-color: #2DCE89;
@@ -164,6 +163,47 @@ hr {
     font-size: 1.5rem;
     margin: 10px;
     padding-left: 50px;
+}
+
+.skill {
+    display: flex;
+    flex-wrap: wrap;
+    width: 1000px;
+    margin: 0 auto;
+    margin-top: 20px;
+    margin-bottom: 40px;
+}
+
+.skill_intro {
+    flex-basis: 100%;
+    color: #212529;
+    text-align: center;
+    font-size: 4.5rem;
+    margin-bottom: 20px;
+}
+
+.technologies {
+    flex-basis: 20%;
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 20px;
+}
+
+.technologies_image {
+    display: block;
+    width: 60px;
+    height: 50px;
+    padding-left: 20px;
+}
+
+.technologies_info {
+    display: flex;
+    font-size: 1.5rem;
+    font-weight: bold;
+    color: black;
+    align-items: center;
+    justify-content: center;
+    padding-left: 10px;
 }
 
 footer {
