--- a/style.css
+++ b/style.css
@@ -55,6 +55,11 @@ header {
     text-decoration: none;
 }
 
+.menu a {
+    text-decoration: none;
+    color: white;
+}
+
 hr {
     border: 0.3px solid white;
     opacity: 0.1;
